# palindrome

./: .env.template  .gitignore  README.md  compose.yaml  justfile  manage.py  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
docker/dev/: Dockerfile  start
local/: template.py
palindrome/: asgi.py  settings.py  urls.py  wsgi.py
palindrome/base/: apps.py  urls.py
palindrome/static/css/: output.css
palindrome/templates/base/: home.html
palindromo/: asgi.py  settings.py  urls.py  wsgi.py
palindromo/base/: apps.py  urls.py  views.py
palindromo/static/css/: output.css
palindromo/templates/base/: home.html
