[tool.poetry]
name = "palindromo"
version = "0.1.0"
description = ""
authors = ["pcampos <pcampos119104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
