[tool.poetry]
name = "palindrome"
version = "0.1.0"
description = ""
authors = ["pcampos <pcampos119104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
django-environ = "^0.11.2"
django-allauth = "^65.0.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-htmx = "^1.19.0"
django-extensions = "^3.2.3"
django-browser-reload = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
ruff = "^0.6.9"
marimo = "^0.9.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configurations for pystest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "palindrome.settings"

# -- find the tests:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

# Configuration for Ruff
[tool.ruff]
# 80 it's the default but nowadays the common sense it's 120.
line-length = 120
# Show an enumeration of all fixed lint violations
show-fixes = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
# which linter to run
select = [
    # isort
    "I",
    # pycodestyle
    "E",
]

[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format_quote-style
# A lot discussion on the internet about it, I use single quotes.
quote-style = "single"